--- a/src/core/config.cfg
+++ b/src/core/config.cfg
@@ -3,3 +3,4 @@ execute FurMark D:\Applications\FurMark\FurMark.exe
 execute steam C:\Program Files (x86)\Steam\steam.exe
 execute chrome C:\Program Files (x86)\Google\Chrome\Application\chrome.exe 
 visit google https://google.de/
+execute thunderbird C:\Program Files (x86)\Mozilla Thunderbird\thunderbird.exe 
